Bug 732923 - CoreLocation provider shouldn't implement nsIGeolocationUpdate. r=jdm